add check for skipping pod and pods resources from the list, update readme, add more UTs
Signed-off-by: Lukas Kral <lukywill16@gmail.com>